LinkedList changed to List